--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -25,7 +25,7 @@
         <!-- URL Input Section - Always Visible -->
         <div id="inputSection" class="section">
             <div class="input-wrapper">
-                <input type="url" id="urlInput" placeholder="Paste link post atau reel..." autocomplete="off">
+                <input type="url" id="urlInput" placeholder="Paste link post, reel, atau story..." autocomplete="off">
                 <button id="pasteBtn" class="paste-btn" title="Paste">📋</button>
             </div>
             <button id="downloadBtn" class="download-btn">
